--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,22 @@ dist.jar=${dist.dir}/HospitalMGT-FX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.com.lowagie.text-2.1.7.jar=/run/media/slash/New Volume/netbeans libraries/com.lowagie.text-2.1.7.jar
+file.reference.commons-beanutils-1.8.3.jar=/run/media/slash/New Volume/netbeans libraries/commons-beanutils-1.8.3.jar
+file.reference.commons-digester-2.1.jar=/run/media/slash/New Volume/netbeans libraries/commons-digester-2.1.jar
+file.reference.dk-monokai-142.jar=/run/media/slash/New Volume/netbeans libraries/dk-monokai-142.jar
+file.reference.itext-2.1.7-src.jar=/run/media/slash/New Volume/netbeans libraries/itext-2.1.7-src.jar
+file.reference.itextpdf-5.3.4.jar=/run/media/slash/New Volume/netbeans libraries/itextpdf-5.3.4.jar
+file.reference.jasperreports-6.4.3.jar=/run/media/slash/New Volume/netbeans libraries/jasperreports-6.4.3.jar
+file.reference.jasperreports-fonts-6.4.3.jar=/run/media/slash/New Volume/netbeans libraries/jasperreports-fonts-6.4.3.jar
+file.reference.jasperreports-javaflow-6.4.3.jar=/run/media/slash/New Volume/netbeans libraries/jasperreports-javaflow-6.4.3.jar
+file.reference.jcommon-1.0.8.jar=/run/media/slash/New Volume/netbeans libraries/jcommon-1.0.8.jar
 file.reference.jfoenix.jar=/run/media/slash/New Volume/netbeans libraries/jfoenix.jar
+file.reference.jfreechart-1.0.13.jar=/run/media/slash/New Volume/netbeans libraries/jfreechart-1.0.13.jar
 file.reference.mysql-connector-java-5.1.42-bin.jar=/run/media/slash/New Volume/netbeans libraries/mysql-connector-java-5.1.42-bin.jar
+file.reference.org-apache-commons-logging.jar=/run/media/slash/New Volume/netbeans libraries/org-apache-commons-logging.jar
+file.reference.org.apache.commons.collections.jar=/run/media/slash/New Volume/netbeans libraries/org.apache.commons.collections.jar
+file.reference.scenicView.jar=/run/media/slash/New Volume/netbeans libraries/scenicView.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,7 +53,21 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jfoenix.jar}:\
-    ${file.reference.mysql-connector-java-5.1.42-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
+    ${file.reference.com.lowagie.text-2.1.7.jar}:\
+    ${file.reference.commons-beanutils-1.8.3.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.dk-monokai-142.jar}:\
+    ${file.reference.itext-2.1.7-src.jar}:\
+    ${file.reference.itextpdf-5.3.4.jar}:\
+    ${file.reference.jasperreports-6.4.3.jar}:\
+    ${file.reference.jasperreports-fonts-6.4.3.jar}:\
+    ${file.reference.jasperreports-javaflow-6.4.3.jar}:\
+    ${file.reference.jcommon-1.0.8.jar}:\
+    ${file.reference.jfreechart-1.0.13.jar}:\
+    ${file.reference.org-apache-commons-logging.jar}:\
+    ${file.reference.org.apache.commons.collections.jar}:\
+    ${file.reference.scenicView.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
